--- a/templates/includes/navbar.liquid
+++ b/templates/includes/navbar.liquid
@@ -12,8 +12,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
+            
             <!-- <li><a href="#contact">Contact</a></li> -->
-            <!-- example if statement -->
+            <!-- Example if statement -->
             <li {% if mixture.url == "example" %}class="active"{% endif %}>
                <a href="example.html">Learn</a>
              </li>
