--- a/templates/layouts/layout.liquid
+++ b/templates/layouts/layout.liquid
@@ -26,6 +26,7 @@
         {% block scripts %}{% endblock %}
 
         {{ "//code.jquery.com/jquery-1.11.0.min.js" | script_tag }}
+        <!--{{ "//code.jquery.com/jquery-1.11.0.min.js" | script_tag }}-->
         {{ "bootstrap.min.js" | asset_url | script_tag }}
         {{ "classie.js" | asset_url | script_tag }}
     </body>
