--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,6 +9,10 @@
 	margin-top: 70px;
 }
 
+a {
+	color:$color-2;
+}
+
 .cd-main-content, .cd-main-header {
     /* Force Hardware Acceleration in WebKit */
     @include transform(translateZ(0));
