--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -4,7 +4,7 @@
 
 <p>
 This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
-This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
 <p>
 Ingredients:
 <li>Sass</li>
