--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -9,7 +9,7 @@ This was quickly put together based off of <a href="https://github.com/twbs/boot
 Ingredients:
 <li>Sass</li>
 <li>Bootstrap with Sass v3.3.1</li>
-<li>Bourbon 3.2.3</li>
+<li>Bourbon</li>
 <li>Jquery via CDN</li>
 </p>
 
