--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -16,7 +16,106 @@ Ingredients:
 <p>With a splash of:</p>
 <li>Modernizer</li>
 <li>Classie.js</li>
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
 
-<a href="/example">Here's an example page.</a>
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
 
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
+
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
+
+<a id="example" href="/example">Here's an example page.</a>
+<a id="example" href="#">Example smooth scroll</a>
+
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
+
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
+
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
+
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
+<p>
+This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
+This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
+<p>
+Ingredients:
+<li>Sass</li>
+<li>Bootstrap with Sass v3.3.1</li>
+<li>Bourbon</li>
+<li>Jquery via CDN</li>
+</p>
+
+<p>With a splash of:</p>
+<li>Modernizer</li>
+<li>Classie.js</li>
 {% endblock %}
