--- a/templates/includes/navbar.liquid
+++ b/templates/includes/navbar.liquid
@@ -7,7 +7,7 @@
         
         <!-- secondary nav = mobile -->
         <ul class="secondary-nav is-hidden">
-          <li class="go-back"><a href="#0">Menu</a></li>
+          <li class="go-back"><a href="#example">Example</a></li>
           <li class="see-all"><a href="#0">All Clothing</a></li>
           <li class="has-children">
             <a href="0">Accessories</a>
@@ -37,39 +37,3 @@
 
 
 
-<!-- <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Bootstrap theme</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            
-            <li><a href="#contact">Contact</a></li>
-            Example if statement
-            <li {% if mixture.url == "example" %}class="active"{% endif %}>
-               <a href="example.html">Learn</a>
-             </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>/.nav-collapse
-      </div>
-    </div> -->
