--- a/templates/example.liquid
+++ b/templates/example.liquid
@@ -10,7 +10,9 @@
       </div>
 
 
-
+      <!-- if example -->
+      <!-- {% if mixture.url == "learn" or "resources" %} {% endif %} -->
+      
       <div class="page-header">
         <h1>Buttons</h1>
        <!--  example image -->
