added custom ruby path
custom for spencers pc at home

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -3,6 +3,7 @@
 <h1>The Manhattan Project</h1>
 
 <p>
+Test
 This is a quick and simple setup for using <a href="https://github.com/spencersmb/The-Manhattan-Project/">Sass + Bootstrap + Bourbon + Jquery</a> in a Mixture project.
 This was quickly put together based off of <a href="https://github.com/twbs/bootstrap-sass">Sass and Bootstrap</a>.
 <p>
