updated with new sass
latest sass with gem to IL directory

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,7 @@
 // Import Bourbon
-@import "bourbon/_bourbon.scss";
+//@import "bourbon/_bourbon.scss";
+
+@import "bourbon/bourbon";
 
 @import "bootstrap/bootstrap.scss";
 
