--- a/templates/example.liquid
+++ b/templates/example.liquid
@@ -14,7 +14,7 @@
       <!-- {% if mixture.url == "learn" or "resources" %} {% endif %} -->
       
       <div class="page-header">
-        <h1>Buttons</h1>
+        <h1>Buttons Test</h1>
        <!--  example image -->
         <!-- <img src={{ 'img.jpg' | asset_url }}  class="img-responsive">
       {{ 'img.jpg' | asset_url | image_tag}} -->
